--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
   "main": "index.js",
   "scripts": {
     "postinstall": "npm run pack:plugin && npm run install:demo",
-    "pack:plugin": "cd nativescript-accessibility-ext && npm pack",
+    "pack:plugin": "cd src && npm pack",
     "demo:android": "npm run install:demo && cd demo && tns debug android --syncAllFiles",
     "demo:ios": "npm run install:demo && cd demo && tns debug ios --syncAllFiles",
     "bundle:android": "npm run install:demo && cd demo && npm run start-android-bundle",
     "bundle:ios": "npm run install:demo && cd demo && npm run start-ios-bundle",
     "install:demo": "npm run build && cd demo && npm i && npm prune",
-    "sass": "cd nativescript-accessibility-ext && rm -rf css && node-sass --recursive --output css scss",
+    "sass": "cd src && rm -rf css && node-sass --recursive --output css scss",
     "build": "npm run tsc && npm run sass",
-    "tsc": "cd nativescript-accessibility-ext && tsc",
-    "tsc-w": "cd nativescript-accessibility-ext && tsc -w"
+    "tsc": "cd src && tsc",
+    "tsc-w": "cd src && tsc -w"
   },
   "repository": {
     "type": "git",
@@ -25,7 +25,21 @@
     "nativescript",
     "accessibility"
   ],
-  "author": "Morten Sjøgren <m_abs@mabs.dk>",
+  "author": {
+    "name": "Nota",
+    "email": "app@nota.dk",
+    "url": "https://nota.dk"
+  },
+  "contributors": [{
+      "name": "Morten Anton Bach Sjøgren",
+      "url": "http://mabs.dk",
+      "email": "mabs@mabs.dk"
+    },
+    {
+      "name": "Daniel Dam Freiling",
+      "email": "dfg@nota.dk"
+    }
+  ],
   "license": "BSD-3-Clause",
   "bugs": {
     "url": "https://github.com/Notalib/nativescript-accessibility-ext/issues"
@@ -34,8 +48,8 @@
   "devDependencies": {
     "nativescript-globalevents": "^1.2.2",
     "node-sass": "^4.10.0",
-    "tns-core-modules": "^5.0.2",
-    "tns-platform-declarations": "^5.0.2",
+    "tns-core-modules": "^5.0.5",
+    "tns-platform-declarations": "^5.0.5",
     "typescript": "^3.1.6"
   }
 }
