--- a/src/package.json
+++ b/src/package.json
@@ -1,103 +1,107 @@
 {
-    "name": "@nota/nativescript-accessibility-ext",
-    "version": "5.0.0-alpha.1",
-    "description": "Nativescript plugin for enabling accessiblity features",
-    "main": "index.js",
-    "typings": "index.d.ts",
-    "nativescript": {
-        "platforms": {
-            "android": "5.0.0",
-            "ios": "5.0.0"
-        },
-        "plugin": {
-            "nan": true,
-            "pan": true,
-            "core3": true,
-            "category": "Utilities"
-        }
+  "name": "@nota/nativescript-accessibility-ext",
+  "version": "5.0.0-alpha.1",
+  "description": "Add support for Accessiblity in NativeScript",
+  "main": "index.js",
+  "typings": "index.d.ts",
+  "nativescript": {
+    "platforms": {
+      "android": "5.0.0",
+      "ios": "5.0.0"
     },
-    "scripts": {
-        "run-prettier": "prettier --write --config ../.prettierrc.json **/.ts ../demo-ng/app/**/*.ts ../demo/app/**/*.ts",
-        "scss": "node-sass --recursive --output css scss",
-        "tsc": "tsc -skipLibCheck",
-        "build": "npm i && tsc && npm run scss",
-        "postclone": "npm i && node scripts/postclone.js && cd ../demo && npm i && cd ../src && npm run plugin.link",
-        "test.android": "npm i && npm run tsc && npm run tslint && cd ../demo && tns build android && tns test android --justlaunch",
-        "test.ios": "npm i && npm run tsc && npm run tslint && cd ../demo && tns build ios && tns test ios --justlaunch",
-        "tslint": "cd .. && tslint \"**/*.ts\" --config tslint.json --exclude \"**/node_modules/**\"",
-        "plugin.link": "npm link && npm-run-all plugin.link.demo plugin.link.demo-ng",
-        "plugin.link.demo": "cd ../demo && npm link nativescript-accessibility-ext",
-        "plugin.link.demo-ng": "cd ../demo-ng && npm link nativescript-accessibility-ext",
-        "plugin.tscwatch": "npm run tsc -- -w",
-        "plugin.sasswatch": "npm run scss && npm run scss -- --watch",
-        "plugin.watch": "npm-run-all --parallel plugin.tscwatch plugin.sasswatch",
-        "demo.android.start": "cd ../demo && tns run android --syncAllFiles",
-        "demo.ios.start": "cd ../demo && tns run ios --syncAllFiles",
-        "demo.ios": "npm i && npm-run-all tsc --parallel plugin.watch demo.ios.start",
-        "demo.android": "npm i && npm-run-all tsc --parallel plugin.watch demo.android.start",
-        "demo.reset": "cd ../demo && rimraf platforms",
-        "demo-ng.android.start": "cd ../demo-ng && tns run android --syncAllFiles",
-        "demo-ng.ios.start": "cd ../demo-ng && tns run ios --syncAllFiles",
-        "demo-ng.ios": "npm i && npm-run-all tsc --parallel plugin.watch demo-ng.ios.start",
-        "demo-ng.android": "npm i && npm-run-all tsc --parallel plugin.watch demo-ng.android.start",
-        "demo-ng.reset": "cd ../demo-ng && rimraf platforms",
-        "plugin.prepare": "npm run build && (cd ../demo && tns plugin remove @nota/nativescript-accessibility-ext && tns plugin add ../src) && (cd ../demo-ng && tns plugin remove @nota/nativescript-accessibility-ext && tns plugin add ../src)",
-        "clean": "npm-run-all clean.demo clean.demo clean.demo-ng && npm run plugin.link",
-        "clean.demo": "cd ../demo && rimraf hooks node_modules platforms package-lock.json",
-        "clean.demo-ng": "cd ../demo-ng && rimraf hooks node_modules platforms package-lock.json",
-        "clean.src": "cd ../src && rimraf node_modules package-lock.json",
-        "ci.tslint": "npm i && tslint '**/*.ts' --config '../tslint.json' --exclude '**/node_modules/**'"
+    "plugin": {
+      "nan": true,
+      "pan": true,
+      "core3": true,
+      "category": "Utilities"
+    }
+  },
+  "scripts": {
+    "format": "prettier --write --config ../.prettierrc.json '**/*.ts' '../demo-ng/app/**/*.ts' '../demo/app/**/*.ts'",
+    "format:check": "prettier-check --config ../.prettierrc.json '**/*.ts' '../demo-ng/app/**/*.ts' '../demo/app/**/*.ts'",
+    "scss": "node-sass --recursive --output css scss",
+    "tsc": "tsc -skipLibCheck",
+    "build": "npm i && npm-run-all lint tsc scss",
+    "postclone": "npm i && node scripts/postclone.js && cd ../demo && npm i && cd ../src && npm run plugin.link",
+    "test.android": "npm i && npm run tsc && npm run tslint && cd ../demo && tns build android && tns test android --justlaunch",
+    "test.ios": "npm i && npm run tsc && npm run tslint && cd ../demo && tns build ios && tns test ios --justlaunch",
+    "tslint": "tslint '**/*.ts' '../demo-ng/app/**/*.ts' '../demo/app/**/*.ts' --config ../tslint.json --exclude \"**/node_modules/**\"",
+    "tslint:fix": "npm run tslint -- --fix",
+    "lint": "npm-run-all tslint format:check",
+    "plugin.link": "npm link && npm-run-all plugin.link.demo plugin.link.demo-ng",
+    "plugin.link.demo": "cd ../demo && npm link nativescript-accessibility-ext",
+    "plugin.link.demo-ng": "cd ../demo-ng && npm link nativescript-accessibility-ext",
+    "plugin.tscwatch": "npm run tsc -- -w",
+    "plugin.sasswatch": "npm run scss && npm run scss -- --watch",
+    "plugin.watch": "npm-run-all --parallel plugin.tscwatch plugin.sasswatch",
+    "demo.android.start": "cd ../demo && tns run android --syncAllFiles",
+    "demo.ios.start": "cd ../demo && tns run ios --syncAllFiles",
+    "demo.ios": "npm i && npm-run-all tsc --parallel plugin.watch demo.ios.start",
+    "demo.android": "npm i && npm-run-all tsc --parallel plugin.watch demo.android.start",
+    "demo.reset": "cd ../demo && rimraf platforms",
+    "demo-ng.android.start": "cd ../demo-ng && tns run android --syncAllFiles",
+    "demo-ng.ios.start": "cd ../demo-ng && tns run ios --syncAllFiles",
+    "demo-ng.ios": "npm i && npm-run-all tsc --parallel plugin.watch demo-ng.ios.start",
+    "demo-ng.android": "npm i && npm-run-all tsc --parallel plugin.watch demo-ng.android.start",
+    "demo-ng.reset": "cd ../demo-ng && rimraf platforms",
+    "plugin.prepare": "npm run build && (cd ../demo && tns plugin remove @nota/nativescript-accessibility-ext && tns plugin add ../src) && (cd ../demo-ng && tns plugin remove @nota/nativescript-accessibility-ext && tns plugin add ../src)",
+    "clean": "npm-run-all clean.demo clean.demo clean.demo-ng && npm run plugin.link",
+    "clean.demo": "cd ../demo && rimraf hooks node_modules platforms package-lock.json",
+    "clean.demo-ng": "cd ../demo-ng && rimraf hooks node_modules platforms package-lock.json",
+    "clean.src": "cd ../src && rimraf node_modules package-lock.json",
+    "ci.lint": "npm i && npm run lint"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Notalib/nativescript-accessibility-ext.git"
+  },
+  "keywords": [
+    "NativeScript",
+    "JavaScript",
+    "Accessibility",
+    "angular",
+    "Android",
+    "TalkBack",
+    "VoiceOver",
+    "iOS"
+  ],
+  "author": {
+    "name": "Nota",
+    "email": "app@nota.dk"
+  },
+  "contributors": [{
+      "name": "Morten Anton Bach Sjøgren",
+      "url": "http://mabs.dk",
+      "email": "mabs@mabs.dk"
     },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/Notalib/nativescript-accessibility-ext.git"
-    },
-    "keywords": [
-        "NativeScript",
-        "JavaScript",
-        "Accessibility",
-        "angular",
-        "Android",
-        "TalkBack",
-        "VoiceOver",
-        "iOS"
-    ],
-    "author": {
-        "name": "Nota",
-        "email": "app@nota.dk"
-    },
-    "contributors": [
-        {
-            "name": "Morten Sjøgren",
-            "email": "m_abs@mabs.dk"
-        },
-        {
-            "name": "Daniel Freiling",
-            "email": "ddfreiling@gmail.com"
-        }
-    ],
-    "license": "BSD-3-Clause",
-    "bugs": {
-        "url": "https://github.com/Notalib/nativescript-accessibility-ext/issues"
-    },
-    "homepage": "https://github.com/Notalib/nativescript-accessibility-ext/#readme",
-    "readmeFilename": "README.md",
-    "devDependencies": {
-        "nativescript-globalevents": "^1.2.2",
-        "node-sass": "^4.10.0",
-        "npm-run-all": "^4.1.1",
-        "prettier": "^1.15.2",
-        "prompt": "^1.0.0",
-        "rimraf": "^2.5.0",
-        "tns-core-modules": "^5.0.2",
-        "tns-platform-declarations": "^5.0.2",
-        "tslint": "^5.11.0",
-        "typescript": "^3.1.6"
-    },
-    "peerDependencies": {
-        "tns-core-modules": "^5.0.0",
-        "nativescript-globalevents": "^1.2.1"
-    },
-    "dependencies": {},
-    "bootstrapper": "nativescript-plugin-seed"
+    {
+      "name": "Daniel Freiling",
+      "email": "ddfreiling@gmail.com"
+    }
+  ],
+  "license": "BSD-3-Clause",
+  "bugs": {
+    "url": "https://github.com/Notalib/nativescript-accessibility-ext/issues"
+  },
+  "homepage": "https://github.com/Notalib/nativescript-accessibility-ext/#readme",
+  "readmeFilename": "README.md",
+  "devDependencies": {
+    "nativescript-globalevents": "^1.2.2",
+    "node-sass": "^4.10.0",
+    "npm-run-all": "^4.1.5",
+    "prettier": "^1.15.2",
+    "prettier-check": "^2.0.0",
+    "prompt": "^1.0.0",
+    "rimraf": "^2.6.2",
+    "tns-core-modules": "^5.0.5",
+    "tns-platform-declarations": "^5.0.5",
+    "tslint": "^5.11.0",
+    "typescript": "^3.1.6"
+  },
+  "peerDependencies": {
+    "tns-core-modules": "^5.0.5",
+    "nativescript-globalevents": "^1.2.2"
+  },
+  "dependencies": {},
+  "bootstrapper": "nativescript-plugin-seed"
 }
