--- a/src/package.json
+++ b/src/package.json
@@ -21,8 +21,7 @@
     "format:check": "prettier-check --config $(git rev-parse --show-toplevel)/.prettierrc.json '**/*.ts' '../demo-ng/app/**/*.ts' '../demo/app/**/*.ts'",
     "scss": "node-sass --recursive --output css scss",
     "tsc": "tsc -skipLibCheck",
-    "build": "npm i && npm-run-all lint tsc scss",
-    "postclone": "npm i && node scripts/postclone.js && cd ../demo && npm i && cd ../src && npm run plugin.link",
+    "build": "npm ci && npm-run-all lint tsc scss",
     "test.android": "npm i && npm run tsc && npm run tslint && cd ../demo && tns build android && tns test android --justlaunch",
     "test.ios": "npm i && npm run tsc && npm run tslint && cd ../demo && tns build ios && tns test ios --justlaunch",
     "tslint": "tslint '**/*.ts' '../demo-ng/app/**/*.ts' '../demo/app/**/*.ts' --config $(git rev-parse --show-toplevel)/tslint.json --exclude \"**/node_modules/**\"",
