--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,7 +15,22 @@
     },
     "**/*.css": {
       "when": "$(basename).scss"
-    }
+    },
+    "src/css": true
+  },
+  "search.exclude": {
+    "{demo-ng,demo}/platforms/**": true,
+    "{demo-ng,demo}/platforms/**/*": true,
+    "**/node_modules": true,
+    "**/bower_components": true
+  },
+  "files.watcherExclude": {
+    "**/.git/objects/**": true,
+    "**/.git/subtree-cache/**": true,
+    "{demo-ng,demo}/platforms/**": true,
+    "{demo-ng,demo}/platforms/**/*": true,
+    "**/node_modules/**": true,
+    "**/node_modules/**/*": true
   },
   "cSpell.words": [
     "Bitmask",
