--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ matrix:
       language: node_js
       os: linux
       node_js: "8"
-      script: cd src && npm run ci.tslint
+      script: cd src && npm run ci.lint
     - stage: "Build /w Webpack"
       os: osx
       env:
