--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,11 @@ matrix:
       node_js: "8"
       jdk: oraclejdk8
       script:
-        - cd src && npm run ci.build && cd ../demo-ng
-        - travis_wait travis_retry tns build ios --bundle --env.aot --env.uglify
+        - cd src && npm run ci.build && npm pack
+        - cd ../demo-ng && tns plugin add ../src/*.tgz
+        - tns build ios --bundle --env.aot --env.uglify
+        - cd ../demo && tns plugin add ../src/*.tgz
+        - tns build ios --bundle --env.aot --env.uglify
     - language: android
       os: linux
       env:
@@ -23,8 +26,11 @@ matrix:
       jdk: oraclejdk8
       before_install: nvm install 8
       script:
-        - cd src && npm run ci.build && cd ../demo-ng
-        - travis_wait travis_retry tns build android --bundle --env.aot --env.uglify --env.snapshot
+        - cd src && npm run ci.build && npm pack
+        - cd ../demo-ng && tns plugin add ../src/*.tgz
+        - tns build android --bundle --env.aot --env.uglify --env.snapshot
+        - cd ../demo && tns plugin add ../src/*.tgz
+        - tns build ios --bundle --env.aot --env.uglify
     # TODO: E2E tests
     # - os: linux
     #   language: android
