--- a/demo/package.json
+++ b/demo/package.json
@@ -5,7 +5,10 @@
   "nativescript": {
     "id": "dk.nota.a11ydemo",
     "tns-android": {
-      "version": "5.3.0"
+      "version": "5.3.1"
+    },
+    "tns-ios": {
+      "version": "5.3.1"
     }
   },
   "scripts": {
@@ -21,7 +24,7 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
-    "@nota/nativescript-accessibility-ext": "file:../src",
+    "@nota/nativescript-accessibility-ext": "file:../src/nota-nativescript-accessibility-ext-5.1.0-alpha.2.tgz",
     "nativescript-angular": "~7.2.3",
     "nativescript-theme-core": "~1.0.4",
     "reflect-metadata": "~0.1.12",
@@ -39,7 +42,7 @@
     "nativescript-dev-sass": "~1.7.0",
     "nativescript-dev-typescript": "~0.9.0",
     "nativescript-dev-webpack": "^0.20.3",
-    "tns-platform-declarations": "~5.3.0",
+    "tns-platform-declarations": "~5.3.1",
     "typescript": "~3.1.6"
   }
 }
