--- a/.travis.yml
+++ b/.travis.yml
@@ -15,10 +15,10 @@ matrix:
       jdk: oraclejdk8
       script:
         - cd src && npm run ci.build && npm pack
-        - cd ../demo-ng && tns plugin add ../src/*.tgz
-        - tns build ios --bundle --env.aot --env.uglify
         - cd ../demo && tns plugin add ../src/*.tgz
-        - tns build ios --bundle --env.aot --env.uglify
+        - npm i && tns build ios --bundle --env.aot --env.uglify
+        - cd ../demo-ng && tns plugin add ../src/*.tgz
+        - npm i && tns build ios --bundle --env.aot --env.uglify
     - language: android
       os: linux
       env:
@@ -27,10 +27,10 @@ matrix:
       before_install: nvm install 8
       script:
         - cd src && npm run ci.build && npm pack
-        - cd ../demo-ng && tns plugin add ../src/*.tgz
-        - tns build android --bundle --env.aot --env.uglify --env.snapshot
         - cd ../demo && tns plugin add ../src/*.tgz
         - tns build ios --bundle --env.aot --env.uglify
+        - cd ../demo-ng && tns plugin add ../src/*.tgz
+        - tns build android --bundle --env.aot --env.uglify
     # TODO: E2E tests
     # - os: linux
     #   language: android
