--- a/src/package.json
+++ b/src/package.json
@@ -1,14 +1,14 @@
 {
   "private": true,
   "name": "@nota/nativescript-accessibility-ext",
-  "version": "6.4.3",
+  "version": "7.0.0-alpha.0",
   "description": "Add support for 'VoiceOver' and 'TalkBack' in NativeScript",
   "main": "index.js",
   "typings": "index.d.ts",
   "nativescript": {
     "platforms": {
-      "android": "6.5.0",
-      "ios": "6.5.0"
+      "android": "7.0.0",
+      "ios": "7.0.0"
     },
     "plugin": {
       "nan": true,
@@ -18,6 +18,7 @@
     }
   },
   "scripts": {
+    "setup": "npm i && ts-patch install",
     "build": "npm-run-all ngc build:tsc build:scss",
     "build:scss": "rimraf css && mkdir css && dart-sass --style compressed --load-path node_modules --source-map scss/a11y-helpers.scss:css/a11y-helpers.css scss/a11y.scss:css/a11y.css scss/a11y.compat.scss:css/a11y.compat.css css",
     "build:tsc": "tsc -skipLibCheck",
@@ -70,23 +71,27 @@
   "homepage": "https://github.com/Notalib/nativescript-accessibility-ext/#readme",
   "readmeFilename": "README.md",
   "devDependencies": {
-    "@angular/animations": "^10.0.14",
-    "@angular/common": "^10.0.14",
-    "@angular/compiler": "^10.0.14",
-    "@angular/compiler-cli": "^10.0.14",
-    "@angular/core": "^10.0.14",
-    "@angular/forms": "^10.0.14",
-    "@angular/platform-browser": "^10.0.14",
-    "@angular/platform-browser-dynamic": "^10.0.14",
-    "@angular/router": "^10.0.14",
-    "@nativescript/angular": "^10.0.3",
-    "@nativescript/core": "^7.0.0",
+    "@angular/animations": "~10.0.14",
+    "@angular/common": "~10.0.14",
+    "@angular/compiler": "~10.0.14",
+    "@angular/compiler-cli": "~10.0.14",
+    "@angular/core": "~10.0.14",
+    "@angular/forms": "~10.0.14",
+    "@angular/platform-browser": "~10.0.14",
+    "@angular/platform-browser-dynamic": "~10.0.14",
+    "@angular/router": "~10.0.14",
+    "@nativescript/angular": "~10.0.3",
+    "@nativescript/core": "~7.0.0",
     "@nativescript/theme": "~2.3.3",
+    "@nativescript/types": "~7.0.0",
+    "@nativescript/webpack": "~3.0.0",
     "dart-sass": "~1.25.0",
+    "ng-packagr": "^10.1.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.1.1",
     "rimraf": "^3.0.2",
     "rxjs": "^6.6.2",
+    "ts-patch": "^1.3.0",
     "tslint": "^6.1.3",
     "tslint-no-circular-imports": "^0.7.0",
     "typescript": "~3.9.7",
