--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
-    "module": "ESNext",
-    "target": "es2015",
+    "target": "ES2017",
+    "module": "esnext",
     "moduleResolution": "node",
     "experimentalDecorators": true,
     "declaration": true,
@@ -13,7 +13,11 @@
     "lib": [
       "es2018", "es2017", "dom", "es6"
     ],
-    "baseUrl": "."
+    "baseUrl": ".",
+    "plugins": [{
+      "transform": "@nativescript/webpack/transformers/ns-transform-native-classes",
+      "type": "raw"
+    }]
   },
   "include": [
     "ui/**/*.ts",
