--- a/package.json
+++ b/package.json
@@ -27,13 +27,14 @@
     "@nrwl/eslint-plugin-nx": "~10.1.0",
     "@nrwl/jest": "~10.1.0",
     "@nrwl/node": "~10.1.0",
-    "@nrwl/workspace": "~10.1.0",
+    "@nrwl/workspace": "^10.2.0",
     "@nstudio/focus": "^10.0.6",
     "@nstudio/nps-i": "~1.1.0",
     "@types/jest": "~26.0.10",
     "@types/node": "~12.0.0",
     "@typescript-eslint/eslint-plugin": "~3.6.0",
     "@typescript-eslint/parser": "~3.6.0",
+    "dart-sass": "^1.25.0",
     "dotenv": "~8.2.0",
     "eslint": "~7.4.0",
     "eslint-config-prettier": "~6.11.0",
@@ -69,5 +70,8 @@
     "**/*": [
       "nx format:write --files"
     ]
+  },
+  "dependencies": {
+    "@nativescript/theme": "^2.3.3"
   }
 }
