--- a/packages/nativescript-accessibility-ext/package.json
+++ b/packages/nativescript-accessibility-ext/package.json
@@ -1,35 +1,55 @@
 {
-  "name": "@nativescript/nativescript-accessibility-ext",
-  "version": "1.0.0",
-  "description": "Add a plugin description",
+  "name": "@nota/nativescript-accessibility-ext",
+  "version": "7.0.0-alpha.0",
+  "description": "Add support for 'VoiceOver' and 'TalkBack' in NativeScript",
   "main": "index",
   "typings": "index.d.ts",
   "nativescript": {
     "platforms": {
-      "ios": "6.0.0",
-      "android": "6.0.0"
+      "android": "7.0.0",
+      "ios": "7.0.0"
+    },
+    "plugin": {
+      "nan": true,
+      "pan": true,
+      "core3": true,
+      "category": "Utilities"
     }
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/NativeScript/plugins.git"
+    "url": "https://github.com/Notalib/nativescript-accessibility-ext.git"
   },
   "keywords": [
     "NativeScript",
     "JavaScript",
-    "TypeScript",
-    "iOS",
-    "Android"
+    "Accessibility",
+    "angular",
+    "Android",
+    "TalkBack",
+    "VoiceOver",
+    "iOS"
   ],
   "author": {
-    "name": "NativeScript",
-    "email": "oss@nativescript.org"
+    "name": "Nota",
+    "email": "app@nota.dk",
+    "url": "https://nota.dk"
   },
+  "contributors": [
+    {
+      "name": "Morten Anton Bach Sjøgren",
+      "url": "http://mabs.dk",
+      "email": "m_abs@mabs.dk"
+    },
+    {
+      "name": "Daniel Freiling",
+      "email": "ddfreiling@gmail.com"
+    }
+  ],
   "bugs": {
-    "url": "https://github.com/NativeScript/plugins/issues"
+    "url": "https://github.com/Notalib/nativescript-accessibility-ext/issues"
   },
   "license": "Apache-2.0",
-  "homepage": "https://github.com/NativeScript/plugins",
-  "readmeFilename": "README.md",
-  "bootstrapper": "@nativescript/plugin-seed"
+  "homepage": "https://github.com/Notalib/nativescript-accessibility-ext/#readme",
+  "readmeFilename": "README.md"
 }
