--- a/packages/nativescript-accessibility-ext/tsconfig.json
+++ b/packages/nativescript-accessibility-ext/tsconfig.json
@@ -5,5 +5,5 @@
     "rootDir": "."
   },
   "exclude": ["**/*.spec.ts", "angular"],
-  "include": ["**/*.ts", "references.d.ts"]
+  "include": ["**/*.ts", "**/*.d.ts", "references.d.ts"]
 }
