--- a/package.json
+++ b/package.json
@@ -59,7 +59,7 @@
     "tslint": "~6.1.2",
     "typescript": "~3.9.3",
     "xml2js": "^0.4.23",
-    "zone.js": "0.11.1"
+    "zone.js": "^0.10.3"
   },
   "husky": {
     "hooks": {
