--- a/package.json
+++ b/package.json
@@ -24,16 +24,16 @@
     "@angular/router": "~10.1.0",
     "@nativescript/angular": "~10.1.0",
     "@nativescript/core": "~7.0.0",
-    "@nativescript/plugin-tools": "~1.0.0",
+    "@nativescript/plugin-tools": "^1.0.6",
     "@nativescript/theme": "^2.5.0",
     "@nativescript/types": "~7.0.0",
     "@nativescript/webpack": "~3.0.0",
     "@ngtools/webpack": "~10.1.0",
     "@nrwl/eslint-plugin-nx": "~10.1.0",
     "@nrwl/jest": "~10.1.0",
-    "@nrwl/node": "~10.1.0",
+    "@nrwl/node": "^10.3.1",
     "@nrwl/workspace": "^10.2.0",
-    "@nstudio/focus": "^10.0.6",
+    "@nstudio/focus": "^10.3.5",
     "@nstudio/nps-i": "~1.1.0",
     "@types/jest": "~26.0.10",
     "@types/node": "~12.0.0",
