--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -10,8 +10,8 @@
   },
   "devDependencies": {
     "@nativescript/android": "~7.0.0",
-    "@nativescript/ios": "7.0.0",
-    "@nativescript/webpack": "3.0.0",
+    "@nativescript/ios": "7.2.0",
+    "@nativescript/webpack": "~4.1.0",
     "typescript": "file:../../node_modules/typescript"
   }
 }
