--- a/package.json
+++ b/package.json
@@ -9,62 +9,66 @@
     "add-angular": "nx g @nativescript/plugin-tools:add-angular",
     "config": "nx g @nativescript/plugin-tools:config",
     "publish-packages": "nx g @nativescript/plugin-tools:publish",
-    "sync-packages-with-demos": "nx g @nativescript/plugin-tools:sync-packages-with-demos"
+    "sync-packages-with-demos": "nx g @nativescript/plugin-tools:sync-packages-with-demos",
+    "postinstall": "node ./node_modules/husky/lib/installer/bin install"
   },
   "private": true,
   "devDependencies": {
-    "@angular/animations": "~10.1.0",
-    "@angular/common": "~10.1.0",
-    "@angular/compiler": "~10.1.0",
-    "@angular/compiler-cli": "~10.1.0",
-    "@angular/core": "~10.1.0",
-    "@angular/forms": "~10.1.0",
-    "@angular/platform-browser": "~10.1.0",
-    "@angular/platform-browser-dynamic": "~10.1.0",
-    "@angular/router": "~10.1.0",
-    "@nativescript/angular": "~10.1.0",
-    "@nativescript/core": "~7.0.0",
-    "@nativescript/plugin-tools": "^1.0.6",
+    "@angular/animations": "~11.2.0",
+    "@angular/common": "~11.2.0",
+    "@angular/compiler": "~11.2.0",
+    "@angular/compiler-cli": "~11.2.0",
+    "@angular/core": "~11.2.0",
+    "@angular/forms": "~11.2.0",
+    "@angular/platform-browser": "~11.2.0",
+    "@angular/platform-browser-dynamic": "~11.2.0",
+    "@angular/router": "~11.2.0",
+    "@nativescript/angular": "~11.0.0",
+    "@nativescript/core": "~7.2.0",
+    "@nativescript/plugin-tools": "^1.1.0",
     "@nativescript/theme": "^2.5.0",
-    "@nativescript/types": "~7.0.0",
-    "@nativescript/webpack": "~3.0.0",
-    "@ngtools/webpack": "~10.1.0",
-    "@nrwl/eslint-plugin-nx": "~10.1.0",
-    "@nrwl/jest": "~10.1.0",
-    "@nrwl/node": "^10.3.1",
-    "@nrwl/workspace": "^10.2.0",
+    "@nativescript/types": "~7.2.0",
+    "@nativescript/webpack": "~4.1.0",
+    "@ngtools/webpack": "~11.2.0",
+    "@nrwl/eslint-plugin-nx": "^11.3.1",
+    "@nrwl/jest": "^11.3.1",
+    "@nrwl/node": "^11.3.1",
+    "@nrwl/workspace": "^11.3.1",
     "@nstudio/focus": "^10.3.5",
     "@nstudio/nps-i": "~1.1.0",
     "@types/jest": "~26.0.10",
     "@types/node": "~12.0.0",
-    "@typescript-eslint/eslint-plugin": "~3.6.0",
-    "@typescript-eslint/parser": "~3.6.0",
+    "@typescript-eslint/eslint-plugin": "^4.15.2",
+    "@typescript-eslint/parser": "^4.15.2",
+    "autoprefixer": "^10.2.4",
     "dart-sass": "^1.25.0",
     "dotenv": "~8.2.0",
     "eslint": "~7.4.0",
     "eslint-config-prettier": "~6.11.0",
-    "husky": "^4.2.5",
+    "husky": "^4.3.0",
     "jest": "~26.4.1",
     "lint-staged": "^10.2.11",
     "nativescript-permissions": "^1.3.9",
     "nativescript-theme-core": "~1.0.4",
     "nativescript-vue": "~2.8.0",
     "nativescript-vue-template-compiler": "~2.8.0",
-    "ng-packagr": "~10.1.0",
+    "ng-packagr": "~11.2.0",
     "node-sass": "^4.12.0",
+    "postcss": "^8.2.6",
+    "postcss-url": "^10.1.1",
     "prettier": "~2.0.4",
     "pretty-data": "^0.40.0",
     "reflect-metadata": "~0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "~6.6.0",
     "strip-json-comments": "^3.1.1",
-    "ts-jest": "~26.2.0",
+    "ts-jest": "^26.5.1",
     "ts-node": "~8.10.2",
     "ts-patch": "^1.3.0",
     "tslint": "~6.1.2",
-    "typescript": "~3.9.3",
+    "typescript": "~4.0.3",
     "xml2js": "^0.4.23",
-    "zone.js": "^0.10.3"
+    "zone.js": "~0.11.1"
   },
   "husky": {
     "hooks": {
